--- a/KCB Branch API H2/src/main/resources/application.properties
+++ b/KCB Branch API H2/src/main/resources/application.properties
@@ -1,17 +1,28 @@
+# App Name
 spring.application.name=KCB Branch API H2
 
+# Dynamic Port (required for Render)
+server.port=${PORT:8080}
+
+# H2 Database Settings
 spring.datasource.url=jdbc:h2:mem:webapi
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=simon
 spring.datasource.password=jsdom
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
+
+# Swagger
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.enabled=true
 springdoc.api-docs.path=/v3/api-docs
+
 
 
 
