--- a/KCB Branch API H2/pom.xml
+++ b/KCB Branch API H2/pom.xml
@@ -107,10 +107,20 @@
             <version>${springdoc.version}</version>
         </dependency>
 
-        <!-- ✅ Tests -->
+        <!-- ✅ Test Dependencies (Complete) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test-autoconfigure</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
