--- a/KCB Branch API H2/Dockerfile
+++ b/KCB Branch API H2/Dockerfile
@@ -1,20 +1,21 @@
-# Use Maven to build the application
+# -------- BUILD STAGE --------
 FROM maven:3.9.4-eclipse-temurin-17 AS build
 WORKDIR /app
 
-# Copy the Maven project files
+# Copy pom and resolve dependencies early for caching
 COPY pom.xml .
+RUN mvn dependency:go-offline -B
+
+# Copy source code
 COPY src ./src
 
-# Build the project (skip tests during image build)
+# Package the app (skip test execution)
 RUN mvn clean package -DskipTests
 
-# Use a minimal JDK image to run the application
+# -------- RUNTIME STAGE --------
 FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
 
-# Copy the built jar from the previous stage
 COPY --from=build /app/target/KCB_Branch_API_H2-0.0.1-SNAPSHOT.jar app.jar
 
-# Run the application
 ENTRYPOINT ["java", "-jar", "app.jar"]
