--- a/KCB Branch API H2/Dockerfile
+++ b/KCB Branch API H2/Dockerfile
@@ -2,20 +2,22 @@
 FROM maven:3.9.4-eclipse-temurin-17 AS build
 WORKDIR /app
 
-# Copy pom and resolve dependencies early for caching
+# Copy pom and resolve dependencies for better caching
 COPY pom.xml .
 RUN mvn dependency:go-offline -B
 
-# Copy source code
+# Copy the source code
 COPY src ./src
 
-# Package the app (skip test execution)
-RUN mvn clean package -DskipTests
+# Build the application without compiling or running tests
+RUN mvn clean package -Dmaven.test.skip=true
 
 # -------- RUNTIME STAGE --------
 FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
 
+# Copy the built JAR from the build stage
 COPY --from=build /app/target/KCB_Branch_API_H2-0.0.1-SNAPSHOT.jar app.jar
 
+# Run the application
 ENTRYPOINT ["java", "-jar", "app.jar"]
