--- a/KCB Branch API H2/Dockerfile
+++ b/KCB Branch API H2/Dockerfile
@@ -18,6 +18,7 @@ WORKDIR /app
 
 # Copy the built JAR from the build stage
 COPY --from=build /app/target/KCB_Branch_API_H2-0.0.1-SNAPSHOT.jar app.jar
+EXPOSE 8080
 
 # Run the application
 ENTRYPOINT ["java", "-jar", "app.jar"]
