--- a/KCB Branch API H2/render.yaml
+++ b/KCB Branch API H2/render.yaml
@@ -4,8 +4,8 @@ services:
     env: docker
     plan: free
     region: oregon   # or nearest region
-    dockerfilePath: KCB Branch API H2/Dockerfile
-    buildContext: ./KCB Branch API H2
+    dockerfilePath: "KCB Branch API H2/Dockerfile"
+    buildContext: "./KCB Branch API H2"
     autoDeploy: true
     envVars:
       - key: JAVA_OPTS
