--- a/KCB Branch API H2/render.yaml
+++ b/KCB Branch API H2/render.yaml
@@ -3,11 +3,12 @@ services:
     name: spring-boot-crud-app-h2-console
     env: docker
     plan: free
-    region: oregon   # or nearest region
-    dockerfilePath: "KCB Branch API H2/Dockerfile"
-    buildContext: "./KCB Branch API H2"
+    region: oregon
+    dockerfilePath: ./Dockerfile   # Dockerfile is at repo root
+    buildContext: .                # Build from root so it sees "KCB Branch API H2"
     autoDeploy: true
     envVars:
       - key: JAVA_OPTS
         value: "-Xmx512m"
-    healthCheckPath: /actuator/health  # change/remove if not using actuator
+    healthCheckPath: /actuator/health  # adjust if actuator not enabled
+
